tests/ui/impl-trait/method-resolution4.next.stderr
error[E0282]: type annotations needed
  --> $DIR/method-resolution4.rs:14:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ cannot infer type

error[E0277]: the size for values of type `impl Iterator<Item = ()>` cannot be known at compilation time
  --> $DIR/method-resolution4.rs:11:20
   |
LL | fn foo(b: bool) -> impl Iterator<Item = ()> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl Iterator<Item = ()>`
   = note: the return type of a function must have a statically known size

error[E0277]: the size for values of type `impl Iterator<Item = ()>` cannot be known at compilation time
  --> $DIR/method-resolution4.rs:14:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl Iterator<Item = ()>`
   = note: the return type of a function must have a statically known size

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0282.
For more information about an error, try `rustc --explain E0277`.
